# ansible-and-terraform-studies

./: .gitignore  README.md
azure/: create-machine-docker.yaml  credentials.yaml  delete-machine-docker.yaml  delete-rg.yaml  vars.yaml
azure/ansible/create_machine/: create_machine.yaml  delete_resource_group.yaml
azure/ansible/install_docker/: README.md  handlers.yaml  hosts.example  install-docker.yaml  playbook.yaml  vars.yaml
azure/terraform/create_machine/: .terraform.lock.hcl  README.md  data.tf  outputs.tf  variables.tf  versions.tf
mgc/: .tool-versions
mgc/vps_simple/: .gitignore  README.md  main.tf  variables.tf
mgc/vps_simple/automation/: facts.json  pyproject.toml
mgc/vps_simple/automation/src/: playbook.yml
mgc/vps_simple/infra/: .terraform.lock.hcl  main.tf  variables.tf
